--- a/index.html
+++ b/index.html
@@ -19,6 +19,44 @@
         </nav>
         <img src="/images/logo2.jpg" alt="logo-image" />
       </div>
+      <div class="hamberger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </header>
+    <div class="main">
+      <aside>
+        <div class="course">
+          <p><a href="">Lavazam barghi</a></p>
+        </div>
+        <div class="course">
+          <p><a href="">mobleman</a></p>
+        </div>
+        <div class="course">
+          <p><a href="">service choob</a></p>
+        </div>
+        <div class="course">
+          <p><a href="">farsh</a></p>
+        </div>
+      </aside>
+      <main>
+        <img src="/images/banner4.jpg" alt="logo-image" />
+        <h2>Your dream home</h2>
+        <p>Everything you want from a dream house...</p>
+      </main>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="./images/mobl2.jpg" alt="logo image" />
+        <div class="card-content">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+            maxime quo dolore?
+          </p>
+          <span> Roghaye Halimi </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
