completed main section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,46 @@
           <span> Roghaye Halimi </span>
         </div>
       </div>
+      <div class="card">
+        <img src="./images/mobl2.jpg" alt="logo image" />
+        <div class="card-content">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+            maxime quo dolore?
+          </p>
+          <span> Roghaye Halimi </span>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./images/mobl2.jpg" alt="logo image" />
+        <div class="card-content">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+            maxime quo dolore?
+          </p>
+          <span> Roghaye Halimi </span>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./images/mobl2.jpg" alt="logo image" />
+        <div class="card-content">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+            maxime quo dolore?
+          </p>
+          <span> Roghaye Halimi </span>
+        </div>
+      </div>
     </div>
+    <footer>
+      <div class="summary">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+          fuga laborum quibusdam deserunt recusandae nobis exercitationem quae
+          molestias ipsum nemo.
+        </p>
+      </div>
+      <div class="links"></div>
+    </footer>
   </body>
 </html>
