completed footer section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
           molestias ipsum nemo.
         </p>
       </div>
-      <div class="links"></div>
+      <div class="links">
+        <ul>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">News</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
